--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
       <lable for="url"></lable>
       <form action="/" method="post">
         <input type="text" id="url" name="enter_url" placeholder="Enter URL">
-        <div><button class=button type="submit" name="sub_url">Submit</button></div>
+        <button class=button type="submit" name="sub_url">Submit</button>
       </form>
     
 
